@@ -1,10 +1,8 @@
 package com.enterprise.auth.platform.user.service;
 
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
-import com.enterprise.auth.platform.common.exception.BusinessException;
 import com.enterprise.auth.platform.common.model.DataScopeType;
 import com.enterprise.auth.platform.common.model.PageResult;
-import com.enterprise.auth.platform.config.PersistenceProperties;
 import com.enterprise.auth.platform.persistence.entity.SysRoleEntity;
 import com.enterprise.auth.platform.persistence.entity.SysUserEntity;
 import com.enterprise.auth.platform.persistence.entity.SysUserRoleEntity;
@@ -15,19 +13,16 @@ import com.enterprise.auth.platform.role.support.RolePayloadCodec;
 import com.enterprise.auth.platform.security.DataScopeService;
 import com.enterprise.auth.platform.tenant.TenantContext;
 import com.enterprise.auth.platform.user.model.UserSummary;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
-import org.springframework.lang.Nullable;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 
 @Service
 public class UserDirectoryService {
 
-    private final PersistenceProperties persistenceProperties;
     private final SysUserMapper sysUserMapper;
     private final SysUserRoleMapper sysUserRoleMapper;
     private final SysRoleMapper sysRoleMapper;
@@ -35,14 +30,12 @@ public class UserDirectoryService {
     private final RolePayloadCodec rolePayloadCodec;
 
     public UserDirectoryService(
-            PersistenceProperties persistenceProperties,
-            @Nullable SysUserMapper sysUserMapper,
-            @Nullable SysUserRoleMapper sysUserRoleMapper,
-            @Nullable SysRoleMapper sysRoleMapper,
+            SysUserMapper sysUserMapper,
+            SysUserRoleMapper sysUserRoleMapper,
+            SysRoleMapper sysRoleMapper,
             DataScopeService dataScopeService,
             RolePayloadCodec rolePayloadCodec
     ) {
-        this.persistenceProperties = persistenceProperties;
         this.sysUserMapper = sysUserMapper;
         this.sysUserRoleMapper = sysUserRoleMapper;
         this.sysRoleMapper = sysRoleMapper;
@@ -55,7 +48,6 @@ public class UserDirectoryService {
     }
 
     public PageResult<UserSummary> listUsers(String username, String mobile, String email, Boolean enabled, int page, int size) {
-        requireDatabaseMode();
         String tenantId = currentTenantId();
 
         LambdaQueryWrapper<SysUserEntity> query = new LambdaQueryWrapper<SysUserEntity>()
@@ -115,15 +107,12 @@ public class UserDirectoryService {
     }
 
     private Map<Long, Set<String>> loadRoleCodes(String tenantId, List<SysUserEntity> users) {
-        if (sysUserRoleMapper == null || sysRoleMapper == null) {
-            return Collections.emptyMap();
-        }
         List<Long> userIds = users.stream().map(SysUserEntity::getId).toList();
         List<SysUserRoleEntity> userRoles = sysUserRoleMapper.selectList(new LambdaQueryWrapper<SysUserRoleEntity>()
                 .eq(SysUserRoleEntity::getTenantId, tenantId)
                 .in(SysUserRoleEntity::getUserId, userIds));
         if (userRoles.isEmpty()) {
-            return Collections.emptyMap();
+            return Map.of();
         }
         List<Long> roleIds = userRoles.stream().map(SysUserRoleEntity::getRoleId).distinct().toList();
         Map<Long, String> roleCodeMap = sysRoleMapper.selectList(new LambdaQueryWrapper<SysRoleEntity>()
@@ -140,12 +129,9 @@ public class UserDirectoryService {
     }
 
     private Map<Long, Set<String>> loadPermissionCodes(String tenantId, Map<Long, Set<String>> roleCodesByUserId) {
-        if (sysRoleMapper == null) {
-            return Collections.emptyMap();
-        }
         Set<String> roleCodes = roleCodesByUserId.values().stream().flatMap(Set::stream).collect(Collectors.toSet());
         if (roleCodes.isEmpty()) {
-            return Collections.emptyMap();
+            return Map.of();
         }
 
         Map<String, Set<String>> permissionCodesByRoleCode = sysRoleMapper.selectList(new LambdaQueryWrapper<SysRoleEntity>()
@@ -172,14 +158,5 @@ public class UserDirectoryService {
     private String currentTenantId() {
         String tenantId = TenantContext.getTenantId();
         return StringUtils.hasText(tenantId) ? tenantId : "platform";
-    }
-
-    private void requireDatabaseMode() {
-        if (!persistenceProperties.databaseEnabled()
-                || sysUserMapper == null
-                || sysUserRoleMapper == null
-                || sysRoleMapper == null) {
-            throw new BusinessException("当前仅支持数据库模式用户目录查询");
-        }
     }
 }
